infra-stage/overlays/stage/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring-system
spec:
  rules:
    - host: "prometheus.128-232-226-7.sslip.io"
