infra-stage/overlays/stage/prometheus-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring-system
spec:
  rules:
    - host: "grafana.128-232-226-7.sslip.io"
